pluma_parser/tests/snapshots/parse_success__def_binary_op.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def A + A -> A {}"
---

=== Source ===
def A + A -> A {}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        17,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                17,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        17,
                    ),
                    kind: BinaryOperator {
                        left: TypeIdentifierNode {
                            pos: (
                                4,
                                5,
                            ),
                            name: "A",
                            generics: [],
                        },
                        op: OperatorNode {
                            pos: (
                                6,
                                7,
                            ),
                            name: "+",
                        },
                        right: TypeIdentifierNode {
                            pos: (
                                8,
                                9,
                            ),
                            name: "A",
                            generics: [],
                        },
                    },
                    return_type: Some(
                        TypeExprNode {
                            pos: (
                                13,
                                14,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        13,
                                        14,
                                    ),
                                    name: "A",
                                    generics: [],
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                    generic_type_constraints: [],
                    params: [],
                    body: [],
                },
            ),
        },
    ],
}

