pluma_parser/tests/snapshots/parse_success__def_one_part_one_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def hello String {\n  |a| \"wow!\"\n}"
---

=== Source ===
def hello String {
  |a| "wow!"
}

=== Comments ===
{}

=== AST ===
Module(0, 33) [
    TopLevelStatement(0, 33) Def(
        DefNode {
            pos: (
                0,
                33,
            ),
            visibility: Public,
            kind: Function {
                signature: [
                    (
                        Ident(4, 9) "hello",
                        TypeExprNode {
                            pos: (
                                10,
                                16,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        10,
                                        16,
                                    ),
                                    name: "String",
                                    generics: [],
                                    constraints: None,
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                ],
            },
            return_type: None,
            generic_type_constraints: [],
            block: Block(17, 33) ([
                Pattern(22, 23) Identifier(Ident(22, 23) "a", false),
            ]) [
                Statement(26, 30) Expr(
                    ExprNode {
                        pos: (
                            26,
                            30,
                        ),
                        kind: Literal {
                            literal: Literal(26, 30) Str("wow!"),
                        },
                        typ: Unknown,
                    },
                ),
            ],
        },
    ),
]

