pluma_parser/tests/snapshots/parse_success__def_receiver_one_part_one_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def Person . greet String {\n  a => \"wow!\"\n}"
---

=== Source ===
def Person . greet String {
  a => "wow!"
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        43,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                43,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        43,
                    ),
                    kind: Method {
                        receiver: TypeIdentifierNode {
                            pos: (
                                4,
                                10,
                            ),
                            name: "Person",
                            generics: [],
                        },
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        13,
                                        18,
                                    ),
                                    name: "greet",
                                },
                                TypeExprNode {
                                    pos: (
                                        19,
                                        25,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                19,
                                                25,
                                            ),
                                            name: "String",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: None,
                    generic_type_constraints: [],
                    params: [
                        IdentifierNode {
                            pos: (
                                30,
                                31,
                            ),
                            name: "a",
                        },
                    ],
                    body: [
                        StatementNode {
                            pos: (
                                36,
                                40,
                            ),
                            kind: Expr(
                                ExprNode {
                                    pos: (
                                        36,
                                        40,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                36,
                                                40,
                                            ),
                                            kind: Str(
                                                "wow!",
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    ],
}

