pluma_parser/tests/snapshots/parse_success__def_two_part_empty_arg.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "def hello () world () {\n  a, b => \"wow!\"\n}"
---

=== Source ===
def hello () world () {
  a, b => "wow!"
}

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        42,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                42,
            ),
            kind: Def(
                DefNode {
                    pos: (
                        0,
                        42,
                    ),
                    visibility: Public,
                    kind: Function {
                        signature: [
                            (
                                IdentifierNode {
                                    pos: (
                                        4,
                                        9,
                                    ),
                                    name: "hello",
                                },
                                TypeExprNode {
                                    pos: (
                                        10,
                                        12,
                                    ),
                                    kind: EmptyTuple,
                                    typ: Unknown,
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        13,
                                        18,
                                    ),
                                    name: "world",
                                },
                                TypeExprNode {
                                    pos: (
                                        19,
                                        21,
                                    ),
                                    kind: EmptyTuple,
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    return_type: None,
                    generic_type_constraints: [],
                    block: BlockNode {
                        pos: (
                            22,
                            42,
                        ),
                        params: [
                            IdentifierNode {
                                pos: (
                                    26,
                                    27,
                                ),
                                name: "a",
                            },
                            IdentifierNode {
                                pos: (
                                    29,
                                    30,
                                ),
                                name: "b",
                            },
                        ],
                        body: [
                            StatementNode {
                                pos: (
                                    35,
                                    39,
                                ),
                                kind: Expr(
                                    ExprNode {
                                        pos: (
                                            35,
                                            39,
                                        ),
                                        kind: Literal(
                                            LiteralNode {
                                                pos: (
                                                    35,
                                                    39,
                                                ),
                                                kind: Str(
                                                    "wow!",
                                                ),
                                            },
                                        ),
                                        typ: Unknown,
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        },
    ],
}

