pluma_parser/tests/snapshots/parse_success__dict_empty.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "[:]"
---

=== Source ===
[:]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        3,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                3,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        3,
                    ),
                    kind: Dict(
                        [],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

