pluma_parser/tests/snapshots/parse_success__empty.snap
---
source: pluma_parser/tests/parse_success.rs
expression: ""
---

=== Source ===


=== Comments ===
{}

=== AST ===
Module(0, 0) []

